# lidarwind

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  dbsFullDay.py  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  tox.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  diagram.rst  environment.yml  index.rst  installation.rst  lidarwind.rst  make.bat  modules.rst  notebooks.rst  overview.rst  readme.rst  requirements.pip  usage.rst
docs/_autosummary/: lidarwind.data_attributes.LoadAttributes.rst  lidarwind.data_operator.DataOperations.rst  lidarwind.data_operator.DbsOperations.rst  lidarwind.data_operator.GetRestructuredData.rst  lidarwind.data_operator.ReadProcessedData.rst  lidarwind.filters.Filtering.rst  lidarwind.filters.SecondTripEchoFilter.rst  lidarwind.filters.WindCubeCloudRemoval.rst  lidarwind.lidar_code.GetLidarData.rst  lidarwind.lidarwind_config.Configurations.rst  lidarwind.wind_prop_retrieval.GetWindProperties5Beam.rst  lidarwind.wind_prop_retrieval.RetriveWindFFT.rst  lidarwind.wind_prop_retrieval_6_beam.SixBeamMethod.rst
docs/examples/: dbs_scans_rendered.ipynb  lidarwind_4_rpg_radar_serial.ipynb  merging_6beam_rendered.ipynb  quicklooks_rendered.ipynb  reading_long_dbs_rendered.ipynb  turbulence_6beam_data_rendered.ipynb
docs/notebooks/: dbs_scans.ipynb  merging_6beam_data.ipynb  quicklooks.ipynb  reading_long_dbs.ipynb  turbulence_6beam_data.ipynb
examples/: dbsFullDay.py  dbsFullDayMultiCore.py  lidarQuickLook.py  merging6beam.py  openLidarDataEx.py
joss/: paper.bib  paper.md
lidarSuit/: __init__.py  dataAttributesL1.py  dataOperator.py  data_operator.py  filters.py  io.py  lidar_code.py  lstConfig.py  lst_config.py  utilities.py  visualization.py  windPropRetrieval.py  windPropRetrieval6Beam.py  wind_prop_retrieval.py  wind_prop_retrieval_6_beam.py
lidarwind/: __init__.py  data_attributes.py  data_operator.py  filters.py  io.py  lidar_code.py  lidarwind_config.py  lst_config.py  utilities.py  visualization.py  wind_prop_retrieval.py  wind_prop_retrieval_6_beam.py
lidarwind/postprocessing/: __init__.py  post_rpg_radar.py  post_wind_cube.py
lidarwind/preprocessing/: __init__.py  rpg_radar.py  wind_cube.py
lidarwind/wind_retrieval/: fft_wind_retrieval.py
notebooks/: dbs_scans.ipynb  merging_6beam_data.ipynb  quicklooks.ipynb  reading_long_dbs.ipynb  turbulence_6beam_data.ipynb
sampleData/wind_and_aerosols_data/12-00/: WLS200s-218_2021-05-13_12-00-03_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-00-08_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-00-14_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-00-18_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-00-23_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-00-28_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-00-33_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-00-39_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-00-44_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-00-48_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-00-53_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-00-58_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-01-04_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-01-09_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-01-15_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-01-18_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-01-23_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-01-29_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-01-34_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-01-39_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-01-45_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-01-48_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-01-53_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-01-59_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-02-04_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-02-09_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-02-15_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-02-18_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-02-24_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-02-29_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-02-34_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-02-39_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-02-45_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-02-49_fixed_377_50m.nc  WLS200s-218_2021-05-13_12-02-54_fixed_393_50m.nc  WLS200s-218_2021-05-13_12-02-59_fixed_389_50m.nc  WLS200s-218_2021-05-13_12-03-04_fixed_385_50m.nc  WLS200s-218_2021-05-13_12-03-10_fixed_381_50m.nc  WLS200s-218_2021-05-13_12-03-15_fixed_399_50m.nc  WLS200s-218_2021-05-13_12-03-19_fixed_377_50m.nc  (+675 more)
sampleData/wind_and_aerosols_data/13-00/: WLS200S-218_2021-07-01_13-03-28_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-03-48_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-04-08_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-04-29_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-04-49_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-05-09_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-05-30_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-05-50_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-06-10_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-06-30_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-10-13_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-10-33_dbs_452_100m.nc  WLS200S-218_2021-07-01_13-10-54_dbs_452_100m.nc  (+175 more)
tests/: __init__.py  data.py  test_IO.py  test_dataOperator.py  test_fourier_transf_wind_method.py  test_get_restructured_data.py  test_get_wind_Properties_5_beam.py  test_lidar_suit.py  test_retrieve_wind_fft.py  test_windPropRetrieval.py  test_wind_prop_retrieval_6_beam.py
tests/postprocessing/: test_post_rpg_radar.py  test_post_wind_cube.py
tests/preprocessing/: test_preprocessing.py  test_rpg_preprocessing.py
tests/wind_retrieval/: test_wind_retrieval.py
