[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
    "milksnake",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[project]
name="lidarSuit"
dynamic = ['version']
description="LIDAR procedures"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords=["Lidar", "Turbulence", "Wind"]
authors = [
  {email = "jdiasn@gmail.com"},
  {name = "José Dias Neto"}
]
classifiers=[
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "xrft>=0.3.0",
  "xarray>=0.19.0",
  "pandas>=1.3.3",
  "numpy>=1.20.3", 
  "netCDF4 >= 1.5",
  "matplotlib>=3.4.3",
  "click>=8.1.2",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.4.3"]
dev = ["sphinx_rtd_theme==0.4.3"]
test = ["pytest"]

[project.urls]
homepage = "https://github.com/jdiasn/lidarSuit"
repository = "https://github.com/jdiasn/lidarSuit"
documentation = "https://lidarSuit.readthedocs.io"

[project.scripts]
"lidarSuit" = "lidarSuit.cli:main"

[tool.black]
line-length = 79

[tool.setuptools_scm]
write_to = "lidarSuit/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"
