[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4",
    "setuptools_scm_git_archive",
    "milksnake",
    "wheel >= 0.38.1",
]
build-backend = 'setuptools.build_meta'

[project]
name="lidarwind"
dynamic = ['version']
description="LIDAR procedures"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords=["Lidar", "Turbulence", "Wind"]
authors = [
  {email = "jdiasn@gmail.com"},
  {name = "José Dias Neto"}
]
classifiers=[
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "xrft>=0.3",
  "xarray>=0.21",
  "pandas>=1.4",
  "numpy>=1.22",
  "netCDF4 >= 1.5",
  "matplotlib>=3.4.3",
  "click>=8.1.2",
  "gdown>=4.5.1",
  "xarray-datatree~=0.0.11",
  "pooch>=1.6",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.4.3"]
dev = [
  "flake8~=4.0.1",
  "pre-commit~=2.20.0",
  "ruff~=0.0.220",
  "sphinx_rtd_theme~=0.4.3"
]
test = [
  "gdown>=4.5.1",
  "pytest>=6.2",
  "pytest-cov>=3.0",
  "nbval",
  "pooch>=1.6",
  "tox~=4.3.0"
]

[project.urls]
homepage = "https://github.com/jdiasn/lidarwind"
repository = "https://github.com/jdiasn/lidarwind"
documentation = "https://lidarwind.readthedocs.io"

[project.scripts]
"lidarwind" = "lidarwind.cli:main"

[tool.black]
line-length = 79

[tool.setuptools_scm]
write_to = "lidarwind/version.py"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
select = ["A", "I", "UP", "W"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["I"]
unfixable = ["F401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs/conf.py",
    "docs/_autosummary",
]
per-file-ignores = {}

line-length = 79

target-version = "py38"

[tool.ruff.pydocstyle]
convention = "numpy"
